--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,85 +1,215 @@
-*{
-    color:black;
-    margin: 0 auto;
+body {
+    background-color: #000B28;
+    margin: 0;
+    padding: 0;
+    
+}
+
+main{
+    text-align: center;
+    color:white;
+    background-color:#000B28;
 }
 header{
-    text-align: left;
-    padding:0px;
-    size:20px;
-    
-}
-
-.logo1{
-float:left;
-
-}
-.fa{
-    color:black;
-    float:right;
-    width:30px;
-    height:80px;
-    font-size:50px;
-}
-
-body{
-    background-image:url("images\\water.jpg");
+    height: 85vh;
+    padding: 0 100px 100px 100px;
+    background-image: url("images/stars.jpg");
     background-position: center;
     background-size: cover;
-    text-align: center;
-    color:black;
-}
-.header-logo{
-    color:black;
+    color:white;
     text-align: center;
 }
-.me{
-    float:right;
+.navbar{
+    padding-left: 30px;  
+    background-color: #000B28;
+    height:55px;
 }
+.navigation{
+    background-color: #000B28;
+}
+
+.A:hover{
+    color:#fdb827;
+}
+
+.brand p{
+    font-family: 'Alex Brush', cursive;
+    font-size: 27px;
+    color:white;
+}
+
+.brand:hover{
+    color:#fdb827;
+    opacity: 1;
+}
+.A{
+    color:white;
+    font-size: 20px;
+    padding-top: 10px;
+}
+.icon {
+    float: right;
+    padding-left: 510px;
+
+}
+
+.fa{
+    color:white;
+    font-size:50px;
+    transition: all 0.5s;
+    padding: 17px 20px 0 20px;
+}
+.fa:hover{
+    color:#fdb827;
+    opacity: 1;
+    text-decoration: none;
+}
+
 .head{
-    font-style:"Lucida Grande";
+    font-style:normal;
     padding-top:190px;
     font-size: 95px;
-    
-    font-family: "caveat";
-    
+    font-family: 'Special Elite', cursive;;
 }
-.sub{
-    font-style: italic;
-    font-size:25px;
-    font-family:serif; 
-}
-
 .info1{
-    opacity:0.7;
+    color:white;
+    font-style: italic;
+    font-size:30px;
+    font-family:'Homemade Apple', cursive; 
+    opacity:0.9;
+    text-decoration: none;
+    transition: all 0.5s;
+}
+.info1:hover{
+    color: #fdb827;
+    opacity: 1;
+    text-decoration: none;
 }
 
-.about1 {
-    padding:20px;
-    font-size: 30px;
-    text-align: center;
+span{
+    font-style:initial;
+}
+#who{
+    padding-top: 60px;
+    font-size: 60px;
 }
 
-.about1 h1{
+.row{
+margin:0 auto;
+padding: 0 50px;
+}
+
+.row h1{
     padding-top: 280px;
     text-align:center;
 }
 
-span{
-    font-style:oblique;
+.row li{
+    list-style: none;
+    text-align: left;
+    padding-left:70px;
 }
 
-.about1 img{
-    width:300px;
-    height:300px;
-    float: left;
-    padding-right: 100px;
+.row img{
+    padding-bottom: 15px;
 }
-.about{
 
+.me {
+    border-radius: 400px;
+    width:255px;  
+    background-color: #00D7E3;
+    
 }
-.about2 li{
-    color:black;
+.b {
+    font-size: 20px;
+    padding-top: 20px;
+    font-family:'Petit Formal Script', cursive;
+}
+
+li{
     list-style: none;
     text-align: center;
 }
 
+.pro{
+    font-size: 0px;
+}
+.hin{
+    padding:20px 0 20px 120px;
+    font-size: 25px;
+    font-family:'Petit Formal Script', cursive;
+}
+
+#cl{
+ padding: 50px 0 40px 0;
+ font-size: 35px;
+ font-family: 'Coda Caption', sans-serif;;
+}
+
+.contents h1{
+    padding-top: 80px;
+    font-size: 40px;
+}
+
+#proj{
+    padding: 120px 0 40px 0;
+    font-size: 35px;
+    font-family: 'Coda Caption', sans-serif;;
+}
+
+.proj1 img{
+    width:200px;
+    height:150px;
+}
+
+.pr{
+    color:white;
+}
+.pr:hover{
+    color:#fdb827;
+    opacity: 1;
+    
+}
+
+.ga{
+    color:white;
+}
+
+.ga:hover{
+    color:#fdb827;
+    opacity: 1;
+}
+
+.iar{
+    width:180px;
+    height:180px;
+}
+
+#ini{
+    padding: 100px 0 40px 0;
+    font-size: 35px;
+    font-family: 'Coda Caption', sans-serif;;
+}
+.copyright {
+    padding: 20px 0 0;
+    margin-bottom: 0;
+    background-color: #000B28;
+    color:white;
+    text-align: center;
+}
+.copyright p{
+    margin-bottom: 0;
+}
+.txt{
+    padding: 0 10px;
+}
+.python{
+    width:250px;
+    height:250px;
+}
+
+
+.HD{
+    font-size: 25px;
+    font-family: 'Patua One', cursive;
+}
